feat(1.12.2): Phase 4 — port to ForgeGradle 2.3 with MCP mappings
ForgeGradle 2.3.4 + MCP snapshot_20171003 + Forge 1.12.2-14.23.5.2847 + Java 8.
Source rewritten with proper MCP names (getFile, getGameProfile, etc.) — no SRG
hacks or reflection. 97 JUnit tests pass on Java 8. Adapter layer implements
server-only skin persistence, lifecycle events, /skin command with full
reconnect-style refresh using 1.12.2 packet classes (SPacketPlayerListItem,
SPacketRespawn, SPacketPlayerPosLook, SPacketPlayerAbilities,
SPacketServerDifficulty). MineSkin path config-gated off for viability gate.

Refs: lib-8 (Mixin alternatives), lib-9 (ForgeGradle + mappings analysis),
fix-32 (toolchain migration), fix-33 (MCP-named adapter layer).

NO-GO-8 (Mixin path) intentionally dropped per lib-8 research: 1.12.2 mods
typically use Forge events + packet refresh; brief default-skin flash on
login is acceptable for the target niche.